# boids-flocking-simulation

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  README.md  run.sh
include/boidSimulation/: Simulation.h
include/boidSimulation/Settings/: config.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: boids.frag  boids.vert
src/boidSimulation/: main.cpp
src/boidSimulation/Math/: util.cpp  util.h
src/boidSimulation/Renderer/: Renderer.cpp  Renderer.h
src/boidSimulation/Shaders/: glShaderLoader.cpp  glShaderLoader.h
src/boidSimulation/Simulation/: Boid.cpp  Boid.h  Flock.cpp  Flock.h  Obstacle.cpp  Obstacle.h  Simulation.cpp
src/boidSimulation/Window/: WindowManager.cpp  WindowManager.h
